--- a/feedback.html
+++ b/feedback.html
@@ -41,6 +41,9 @@ EDIT</div>
 </div>
 
     <script>
+          var docMod = document.lastModified; // loads last modified time stamp into docMod variable
+	        alert("This file last modified " + docMod); // generates alert box with time stamp. If annoying, comment out this entire line.
+		    console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp.
           const btn = document.querySelector("button");
           const post = document.querySelector(".post");
           const widget = document.querySelector(".star-widget");
